# rocket-auth

./: .gitignore  Cargo.toml  package.json  webpack.config.js
public/: index.html
server/: lib.rs  main.rs  modules.rs  pool.rs
server/lib/routes/: mod.rs
server/lib/tests/: mod.rs
server/models/: user.rs
server/modules/tests/: mod.rs
server/routes/: auth.rs  mod.rs  user.rs
server/tests/: mod.rs
src/: App.tsx  main.rs
