[package]
name = "rocket_auth_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rocket_auth_demo"
path = "server/main.rs"

[lib]
name = "rocket_auth_demo"
path = "server/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
crypto = { version = "0.5.0", features = ["digest", "password-hash"] }
dotenv = "0.15.0"
futures-util = "0.3.28"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_auth = { version = "0.4.0", features = ["tokio-postgres"] }
rocket_codegen = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["helmet"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
serde = "1.0.163"
serde_derive = "1.0.163"
tokio = "1.28.2"
tokio-postgres = "0.7.8"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
